# ch32v003-cmake

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  ch32v003fun.ld  xpack-riscv-none-elf-gcc.cmake
lib/: CMakeLists.txt
src/: main.cpp
src/config/: funconfig.h
src/inc/: example.h
